fix spacing too high

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,16 @@
 
 .kor {
     font-family: 'HANBatang', serif;
+    line-height: 1.6;
+    margin-top: 2px;
+    margin-bottom: 8px;
 }
 
 
 .vie {
     font-family: "Times New Roman", Times, serif;
+    line-height: 1.6;
+    margin-top: 2px;
+    margin-bottom: 8px;
 }
 
